# poorify

./: .gitignore  AGENTS.md  README.md  poorify.md  poorify.xml  pyproject.toml
.opencode/: opencode.json
.poorify/agents/: development_agent.md  requirements_agent.md  testing_agent.md
commands/: execute.md  init.md  inspect.md  metrics.md
src/poorify/: db.py  engine.py  gate.py  main.py  mcp_server.py  metrics.py  router.py  utils.py
tests/: test_db.py  test_engine.py  test_metrics.py  test_router.py
